# axum_strada

./: Cargo.toml
src/: main.rs
website/: index.html
website/register/: index.html
website/welcome/: index.html
